kubernetes/namespaces/modmail/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modmail-web
  namespace: modmail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modmail-web
  template:
    metadata:
      labels:
        app: modmail-web
    spec:
      containers:
        - name: modmail-web
          image: ghcr.io/python-discord/logviewer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 150Mi
          ports:
            - containerPort: 8000
          securityContext:
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
