kubernetes/namespaces/modmail/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modmail-web
  namespace: modmail
spec:
  selector:
    app: modmail-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
